Tue Feb 25 00:14:10 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* unif.c (scm_init_unif): Added #include "unif.x".  (There are two
	scm_init_unif in this file.  This will also fix a previous problem
	with guile-snarf.)

	* configure.in: Added AM_MAINTAINER_MODE

Fri Feb 21 23:07:26 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gdb_interface.h (GDB_INTERFACE): Added some (void *) casts to
	avoid warnings.

Fri Feb 21 18:00:38 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_libguile_la_SOURCES): New variable to hold
 	source files that are not always included in libguile but should
 	have their dependencies calculated by automake.  This variable is
 	recognized by automake, no further magic is needed.
	(libguile_la_DEPENDENCIES): Changed to @LIBLOBJS@.  Libtool wants
 	to deal exclusively with *.lo files, as it seems.  The *.o files
 	are built automatically when the corresponding *.lo file gets
 	built.

Wed Feb 19 14:04:23 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* list.h (scm_list_cdr_ref): Delete prototype; function no longer
	exists.

Thu Feb 13 21:44:07 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* unif.c (scm_array_set_x): minor change to argument error checking.

Tue Feb 11 18:19:47 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.am (libguile_la_SOURCES): Remove backtrace.c, debug.c,
 	inet_aton.c, srcprop.c, stacks.c, and strerror.c from this list.
  	They should only be included in the library at configure.in's
 	discretion.
	(libguile_la_LDADD): Include the appropriate .lo files here.
	(libguile_la_DEPENDENCIES): List the corresponding .o files here,
	so we know when to build them (and their .lo bretheren).
	* configure.in (LIBLOBJS): New substituted variable.  We let
 	configure decide which .o files to include in LIBOBJS, and then
 	put the corresponding list of .lo files in LIBLOBJS.  The latter
	is what we pass to libtool.
	* Makefile.in, configure: regenerated.
