@@ -1,3 +1,9 @@
+Wed Feb 26 12:53:58 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* symbols.c, symbols.h (scm_symbol_value0): New function.  Can be
+ 	used from C to easily lookup the value of a symbol in the current
+ 	module.
+
 Tue Feb 25 00:14:10 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* unif.c (scm_init_unif): Added #include "unif.x".  (There are two
